--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -14,6 +14,7 @@ header {
     background-color: #2a607c;
     color: #ffffff;
 }
+
 h1 {
     display: inline-block;
     font-size: 48px;
@@ -34,10 +35,12 @@ nav{
 ul{
     list-style-type: none;
 }
+
 li{
     display: inline-block;
     margin-left: 25px;
 }
+
 a {
     color: #ffffff;
     text-decoration: none;
@@ -56,18 +59,38 @@ p {
     background-position: center;
 }
 
-.float-left {
+.float-left{
+
     float: left;
     margin-right: 25px;
+
+    /* height: 80px;
+    width: 10%; */
 }
 
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-.content {
+.content{
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+
 }
+
+.search-engine-optimization{
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+    
+}
+
+.search-engine-optimization img {
+    max-height: 200px;
+}
+
+
+
+
+
+
