--- a/assets/css/style-2.css
+++ b/assets/css/style-2.css
@@ -50,6 +50,11 @@ p {
     font-size: 16px;
 }
 
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
 .hero {
     height: 800px;
     width: 100%;
@@ -60,22 +65,23 @@ p {
 }
 
 .float-left{
-
     float: left;
     margin-right: 25px;
-
-    /* height: 80px;
-    width: 10%; */
 }
 
-.content{
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
+main{
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 
 }
 
-.search-engine-optimization{
+article{
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -85,11 +91,9 @@ p {
     
 }
 
-.search-engine-optimization img {
+article img{
     max-height: 200px;
 }
-
-
 
 
 
