--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,11 @@ h2 {
     font-size: 36px;
 }
 
+h3{
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 .hero {
     height: 800px;
     width: 100%;
@@ -112,7 +117,7 @@ aside {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #1d658c;
 }
 
 aside section {
@@ -131,6 +136,10 @@ footer {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+}
+
+footer h2{
+    font-size: 20px;
 }
 
 
