--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,10 +136,13 @@ footer {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    
 }
 
 footer h2{
     font-size: 20px;
+    /* color: #474747; */
+
 }
 
 
